<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:gravity="center"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/colaj_device"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_10dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:id="@+id/wifi_layout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colaj_device_desc"
            android:textSize="@dimen/_20sp"
            android:gravity="center"
            android:layout_margin="@dimen/_10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_margin="@dimen/_10dp"
            android:layout_weight="1"
            android:id="@+id/device_list"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/_10dp"
        android:id="@+id/device_not_found">
        <ImageView
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:src="@drawable/ic_baseline_highlight_off_24"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device_not_found"
            android:textSize="@dimen/_20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_40dp"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/button_pressed_text"
            android:background="@drawable/peter_river_transparent_button"
            android:text="@string/previous"/>
        <Button
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_40dp"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/white"
            android:background="@drawable/blue_round_button"
            android:id="@+id/retry"
            android:text="@string/retry"/>
    </LinearLayout>
</LinearLayout>