<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/_10dp"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_your_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                android:layout_marginBottom="@dimen/_30dp"        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_your_email_desc"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:background="@drawable/textfield_background"
                android:layout_marginBottom="@dimen/_10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_drafts_24"
                    android:paddingLeft="@dimen/_5dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/textfield_background"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_10dp"
                    android:hint="@string/email_hint"/>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="0.3"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_10dp"
        android:id="@+id/verify"
        android:background="@drawable/turquoise_round_button"/>
</LinearLayout>